Add missing descriptions

--- a/common/credentials/Cargo.toml
+++ b/common/credentials/Cargo.toml
@@ -3,6 +3,7 @@ name = "nym-credentials"
 version.workspace = true
 edition = "2021"
 license.workspace = true
+description = "Crate for using Nym's zknym credentials"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
