--- a/common/registration/Cargo.toml
+++ b/common/registration/Cargo.toml
@@ -13,6 +13,7 @@ workspace = true
 
 [dependencies]
 tokio-util.workspace = true
+serde.workspace = true
 
 nym-authenticator-requests = { path = "../authenticator-requests" }
 nym-crypto = { path = "../crypto" }
