--- a/common/credential-storage/Cargo.toml
+++ b/common/credential-storage/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 license.workspace = true
 rust-version.workspace = true
 description = "Crate for handling and storing spent and unspent zknym ticketbooks"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
