--- a/common/wasm/storage/Cargo.toml
+++ b/common/wasm/storage/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Jedrzej Stuczynski <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
 description = "indexeddb-backed in-browser storage with optional encryption implentation and helpers"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
