--- a/nym-sqlx-pool-guard/Cargo.toml
+++ b/nym-sqlx-pool-guard/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition = "2024"
 license.workspace = true
 description = "Platform-specific functions for SQLX dbs"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 [lints]
 workspace = true
