--- a/clients/native/websocket-requests/Cargo.toml
+++ b/clients/native/websocket-requests/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Jędrzej Stuczyński <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
 description = "Request and response definitions for Nym client websocket connections"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
