--- a/common/credential-utils/Cargo.toml
+++ b/common/credential-utils/Cargo.toml
@@ -4,7 +4,9 @@ version.workspace = true
 edition = "2021"
 license.workspace = true
 description = "Utils crate for dealing with zknym credentials"
-
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
