--- a/common/node-tester-utils/Cargo.toml
+++ b/common/node-tester-utils/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition = "2021"
 license.workspace = true
 description = "Utils for the Nym Node Tester"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
