--- a/common/nonexhaustive-delayqueue/Cargo.toml
+++ b/common/nonexhaustive-delayqueue/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Jędrzej Stuczyński <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
 description = "A copy of tokio-util delay_queue with `Sleep` and `Instant` being replaced with`wasm_timer` equivalents"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
