--- a/common/socks5/proxy-helpers/Cargo.toml
+++ b/common/socks5/proxy-helpers/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Jedrzej Stuczynski <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
 description = "Helpers for the Nym SOCKS client"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
