--- a/common/store-cipher/Cargo.toml
+++ b/common/store-cipher/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition = "2021"
 license.workspace = true
 description = "Helpers for various ciphers used throughout the Nym network"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
