--- a/sdk/ffi/cpp/Cargo.toml
+++ b/sdk/ffi/cpp/Cargo.toml
@@ -2,6 +2,9 @@
 name = "nym-cpp-ffi"
 version.workspace = true
 edition = "2021"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 license.workspace = true
 description = "C++ FFI bindings for Nym Rust SDK"
 
