--- a/sdk/ffi/go/Cargo.toml
+++ b/sdk/ffi/go/Cargo.toml
@@ -2,6 +2,9 @@
 name = "nym-go-ffi"
 version.workspace = true
 edition = "2021"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 license.workspace = true
 description = "Go FFI bindings for Nym Rust SDK"
 
