--- a/common/nym-id/Cargo.toml
+++ b/common/nym-id/Cargo.toml
@@ -7,7 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
-description = "max todo"
+description = "Functionality for importing and storing credentials and cryptographic keys"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
