--- a/nym-registration-client/Cargo.toml
+++ b/nym-registration-client/Cargo.toml
@@ -7,7 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
-description = "max todo"
+description = "Crate for dealing with Mixnet and Wireguard registration between Nym clients and Gateways"
 
 [lints]
 workspace = true
