--- a/Cargo.toml
+++ b/Cargo.toml
@@ -390,7 +390,7 @@ zeroize = "1.7.0"
 
 prometheus = { version = "0.14.0" }
 
-# Workspace dep definitions required by crates.io publication - for a full list of published crates run `cargo workspaces plan --long` from the monorepo root
+# Workspace dep definitions required by crates.io publication - we need a workspace version since `cargo workspaces` doesn't work with path imports from crate manifests
 nym-api-requests = { version = "1.20.1", path = "nym-api/nym-api-requests" }
 nym-authenticator-requests = { version = "1.20.1", path = "common/authenticator-requests" }
 nym-async-file-watcher = { version = "1.20.1", path = "common/async-file-watcher" }
