integration test for LP entry registration
This includes creation of mocks of various gateway-related components, such as the PeerController

--- a/common/test-utils/Cargo.toml
+++ b/common/test-utils/Cargo.toml
@@ -15,6 +15,9 @@ anyhow = { workspace = true }
 futures = { workspace = true }
 rand_chacha = { workspace = true }
 tokio = { workspace = true, features = ["sync", "time", "rt"] }
+tracing = { workspace = true }
+
+nym-bin-common = { path = "../bin-common", features = ["tracing"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
