--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,6 +174,7 @@ members = [
     "wasm/node-tester",
     "wasm/zknym-lib",
     "nym-gateway-probe",
+    "integration-tests",
 ]
 
 default-members = [
