--- a/common/async-file-watcher/Cargo.toml
+++ b/common/async-file-watcher/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 description = "Simple file watcher that sends a notification whenever there was any change in the watched file"
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
