Integration test for nested LP registration
- move `LpTransport` trait definition to shared `nym-lp-transport` crate
- make transport layer within `LpConnectionHandler` generic with respect to the forwarding target. it must, however, use the same type as the incoming client connection
- extracted explicit `LpConnectionHandler::establish_exit_stream` to more easily modify it in the future to fully protect the channel and disallow using untrusted egress points
- fix additional log-string interpolation nits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,7 +174,7 @@ members = [
     "wasm/node-tester",
     "wasm/zknym-lib",
     "nym-gateway-probe",
-    "integration-tests",
+    "integration-tests", "common/nym-lp-transport",
 ]
 
 default-members = [
