--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -20,9 +20,11 @@ nym-crypto = { path = "../common/crypto", features = ["asymmetric", "rand"] }
 nym-credential-verification = { path = "../common/credential-verification" }
 nym-credentials-interface = { path = "../common/credentials-interface" }
 nym-test-utils = { path = "../common/test-utils" }
-nym-registration-client = { path = "../nym-registration-client", features = ["io-mocks"] }
+nym-registration-client = { path = "../nym-registration-client" }
+nym-lp-transport = { path = "../common/nym-lp-transport", features = ["io-mocks"] }
 nym-gateway = { path = "../gateway" }
 sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
+tracing = { workspace = true }
 
 
 [lints]
