--- a/nym-registration-client/Cargo.toml
+++ b/nym-registration-client/Cargo.toml
@@ -29,12 +29,8 @@ nym-credentials-interface = { path = "../common/credentials-interface" }
 nym-crypto = { path = "../common/crypto" }
 nym-ip-packet-client = { path = "../nym-ip-packet-client" }
 nym-lp = { path = "../common/nym-lp" }
+nym-lp-transport = { path = "../common/nym-lp-transport" }
 nym-registration-common = { path = "../common/registration" }
 nym-sdk = { path = "../sdk/rust/nym-sdk" }
 nym-validator-client = { path = "../common/client-libs/validator-client" }
 nym-wireguard-types = { path = "../common/wireguard-types" }
-
-nym-test-utils = { path = "../common/test-utils", optional = true }
-
-[features]
-io-mocks = ["nym-test-utils"]
