--- a/Cargo.toml
+++ b/Cargo.toml
@@ -168,7 +168,19 @@ members = [
     "wasm/mix-fetch",
     "wasm/node-tester",
     "wasm/zknym-lib",
-    "nym-gateway-probe"
+    "nym-gateway-probe",
+
+    # experimenting with moving contracts/ workspace members into here
+    "contracts/coconut-dkg",
+    "contracts/ecash",
+    "contracts/mixnet",
+    "contracts/mixnet-vesting-integration-tests",
+    "contracts/nym-pool",
+    "contracts/multisig/cw3-flex-multisig",
+    "contracts/multisig/cw4-group",
+    "contracts/vesting",
+    "contracts/performance",
+
 ]
 
 default-members = [
@@ -188,7 +200,7 @@ default-members = [
     "tools/nymvisor",
 ]
 
-exclude = ["contracts", "nym-wallet", "cpu-cycles"]
+exclude = ["nym-wallet", "cpu-cycles"]
 
 [workspace.package]
 authors = ["Nym Technologies SA"]
@@ -473,11 +485,22 @@ nym-wasm-client-core = { version = "1.20.1", path = "common/wasm/client-core" }
 nym-wasm-storage = { version = "1.20.1", path = "common/wasm/storage" }
 nym-wasm-utils = { version = "1.20.1", path = "common/wasm/utils", default-features = false }
 
+# experimenting with moving contracts/ workspace members into here
+cw3-flex-multisig = { version = "2.0.0", path = "contracts/multisig/cw3-flex-multisig" }
+cw4-group = { version = "2.0.0", path = "contracts/multisig/cw4-group" }
+
+nym-contracts-common-testing = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/contracts-common-testing" }
+easy-addr = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/easy_addr" }
+nym-pool-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/nym-pool-contract" }
+nym-mixnet-contract = { version = "1.5.1", path = "contracts/mixnet" }
+
+
 # coconut/DKG related
 # unfortunately until https://github.com/zkcrypto/bls12_381/issues/10 is resolved, we have to rely on the fork
 # as we need to be able to serialize Gt so that we could create the lookup table for baby-step-giant-step algorithm
 # plus to make our live easier we need serde support from https://github.com/zkcrypto/bls12_381/pull/125
-bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false, branch = "temp/experimental-serdect-updated" }
+# MAX TODO upload this to crates.io and then pull in from there
+bls12_381 = { git = "https://github.com/nymtech/bls12_381", default-features = false, branch = "temp/experimental-serdect-updated" }
 group = { version = "0.13.0", default-features = false }
 ff = { version = "0.13.1", default-features = false }
 subtle = "2.5.0"
@@ -493,6 +516,14 @@ cw3 = { version = "=2.0.0" }
 cw4 = { version = "=2.0.0" }
 cw-controllers = { version = "=2.0.0" }
 cw-multi-test = "=2.3.2"
+
+# experimenting with moving contracts/ workspace members into here - additional required deps
+cosmwasm-crypto = "=2.2.2"
+cosmwasm-derive = "=2.2.2"
+cw3-fixed-multisig = "=2.0.0"
+cw20 = "=2.0.0"
+cw20-base = "2.0.0"
+sylvia = "1.3.3"
 
 # cosmrs-related
 bip32 = { version = "0.5.3", default-features = false }
