--- a/contracts/multisig/cw3-flex-multisig/Cargo.toml
+++ b/contracts/multisig/cw3-flex-multisig/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 repository = "https://github.com/CosmWasm/cw-plus"
 homepage = "https://cosmwasm.com"
 documentation = "https://docs.cosmwasm.com"
+publish = false
 
 [[bin]]
 name = "schema"
