--- a/contracts/mixnet/Cargo.toml
+++ b/contracts/mixnet/Cargo.toml
@@ -7,6 +7,7 @@ authors = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
 readme = "README.md"
+publish = false
 
 exclude = [
     # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
