--- a/contracts/nym-pool/Cargo.toml
+++ b/contracts/nym-pool/Cargo.toml
@@ -5,6 +5,7 @@ edition = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
+publish = false
 
 [[bin]]
 name = "schema"
