--- a/common/credentials/Cargo.toml
+++ b/common/credentials/Cargo.toml
@@ -8,7 +8,7 @@ description = "Crate for using Nym's zknym credentials"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bls12_381 = { workspace = true, default-features = false, features = ["pairings", "alloc", "experimental"] }
+nym-bls12_381-fork = { workspace = true, default-features = false, features = ["pairings", "alloc", "experimental"] }
 bincode = { workspace = true }
 cosmrs = { workspace = true }
 thiserror = { workspace = true }
